implement start game logic
