# swagger/game.swagger.json
@@ -99,6 +99,38 @@
           "GameService"
         ]
       }
+    },
+    "/games/start": {
+      "post": {
+        "operationId": "GameService_StartGame",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/gameStartGameResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/gameStartGameRequest"
+            }
+          }
+        ],
+        "tags": [
+          "GameService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -150,6 +182,23 @@
           "type": "string"
         }
       }
+    },
+    "gameStartGameRequest": {
+      "type": "object",
+      "properties": {
+        "HostNickname": {
+          "type": "string"
+        },
+        "OpponentField": {
+          "type": "string"
+        },
+        "UUID": {
+          "type": "string"
+        }
+      }
+    },
+    "gameStartGameResponse": {
+      "type": "object"
     },
     "protobufAny": {
       "type": "object",
